5 interesting things about signals

--- a/src/app/untracked/untracked.component.html
+++ b/src/app/untracked/untracked.component.html
@@ -1,1 +1,2 @@
-<p>untracked works!</p>
+<button (click)="updateCounterOne()">Update Counter 1</button>
+<button (click)="updateCounterTwo()">Update Counter 2</button>
